--- a/menu.css
+++ b/menu.css
@@ -1,22 +1,24 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-body{
+body {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     min-height: 100vh;
-
+    background: #f0f0f0;
+    padding-bottom: 20px;
 }
 
-footer{
-    position: relative;
-    width: 400px;
-    height: 70px;
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -24,21 +26,22 @@ footer{
     border-radius: 10px;
 }
 
-
-footer > .navegacao{
+.navegacao {
     display: flex;
-    width: 350px;
+    width: 87.5%;
+    justify-content: space-around;
 }
 
-.navegacao .list{
+.navegacao .list {
     position: relative;
-    width: 70px;
-    height: 70px;
-    list-style: none;
+    width: 60px;
+    height: 60px;
     margin: 6px;
+    list-style: none;
     z-index: 1;
 }
-.list a{
+
+.list a {
     position: relative;
     display: flex;
     justify-content: center;
@@ -46,114 +49,110 @@ footer > .navegacao{
     flex-direction: column;
     width: 100%;
     text-align: center;
-    font-weight: 500;
-    list-style-type: none;
     text-decoration: none;
+    color: #fff;
+    font-weight: 500;
 }
 
-.navegacao img{
-    width: 30px;
-    height: 30px;
+.navegacao img {
+    width: 25px;
+    height: 25px;
 }
 
-footer ul li a .circulo{
+footer ul li a .circulo {
     position: absolute;
     display: block;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
-    border: 1.8px solid #FFFF;
-    transform: translateY(-53px) scale(0);
+    border: 2px solid #ffffff;
+    transform: translateY(-35px) scale(0);
 }
 
-footer ul li.active a .circulo{
+footer ul li.active a .circulo {
     transition: .5s;
     transition-delay: .5s;
-    transform: translateY(-53px) scale(1);
+    transform: translateY(-35px) scale(1);
 }
 
-footer ul li a .icons{
+footer ul li a .icons {
     position: relative;
     display: block;
-    line-height: 75px;
-    font-size: 1.5rem;
+    line-height: 65px;
+    font-size: 1.2rem;
     text-align: center;
     color: #fff;
     transition: .5s;
 }
 
-footer ul li.active a .icons{
-    transform: translateY(-45px);
+footer ul li.active a .icons {
+    transform: translateY(-30px);
 }
 
-
-footer ul li a .texto{
+footer ul li a .texto {
     color: #fff;
     position: absolute;
     font-weight: 400;
-    font-size: .75em;
-    letter-spacing: .05em;
+    font-size: 0.75em;
     opacity: 0;
-    transform: translateY(20px);
-    transition: .5s;
+    transform: translateY(15px);
+    transition: .3s;
 }
 
-footer ul li.active a .texto{
+footer ul li.active a .texto {
     opacity: 1;
     transform: translateY(10px);
 }
 
 .selecionado {
     position: absolute;
-    top: -50px;
-    width: 70px;
-    height: 70px;
+    top: -50%;
+    width: 60px;
+    height: 60px;
     background: linear-gradient(45deg, rgb(0, 108, 180), #4180AB, #8AB3CF);
-    border: 6px solid #fff;
+    border: 4px solid #fff;
     border-radius: 50%;
+    transition: transform 0.3s ease-in-out;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+
 .selecionado::before{
     content: '';
     position: absolute;
-    top: 50%;
+    top: 55%;
     left: -22px;
     width: 20px;
     height: 20px;
-    background: transparent;
     border-top-right-radius: 20px;
-    box-shadow: 1px -10px 0 #ffff;
+    background: transparent;
 }
 .selecionado::after{
     content: '';
     position: absolute;
-    top: 50%;
+    top: 55%;
     right: -22px;
     width: 20px;
     height: 20px;
-    background: transparent;
     border-top-left-radius: 20px;
-    box-shadow: -1px -10px 0 #ffff;
+    background: transparent;
+
 }
 
 footer ul li:nth-child(1).active ~.selecionado{
-    transform: translateX(calc(70px * 0));
+    transform: translateX(calc(-87.5% * 2));
 }
 footer ul li:nth-child(2).active ~.selecionado{
-    transform: translateX(calc(70px * 1));
+    transform: translateX(calc(-87.5% * 1));
 }
 footer ul li:nth-child(3).active ~.selecionado{
-    transform: translateX(calc(70px * 2));
+    transform: translateX(calc(87.5% * 0));
 }
 footer ul li:nth-child(4).active ~.selecionado{
-    transform: translateX(calc(70px * 3));
+    transform: translateX(calc(87.5% * 1));
 }
 footer ul li:nth-child(5).active ~.selecionado{
-    transform: translateX(calc(70px * 4));
+    transform: translateX(calc(87.5% * 2));
 }
-
-
-
